better board marker colors

--- a/lectures/template.html
+++ b/lectures/template.html
@@ -279,6 +279,11 @@ $endif$
         	theme: "whiteboard",
 			    toggleChalkboardButton: { left: "30px", bottom: "60px", top: "auto", right: "auto" },
 			    toggleNotesButton: { left: "30px", bottom: "90px", top: "auto", right: "auto" },
+          boardmarkers : [
+            { color: 'rgba(220,20,60,1)', cursor: 'url(' + path + 'img/boardmarker-red.png), auto'},
+            { color: 'rgba(50,205,50,1)', cursor: 'url(' + path + 'img/boardmarker-green.png), auto'},
+            { color: 'rgba(255,140,0,1)', cursor: 'url(' + path + 'img/boardmarker-orange.png), auto'}
+          ]
        	},
 
         helpButtonDisplay: 'first',
