fix code highlighting

--- a/lectures/template.html
+++ b/lectures/template.html
@@ -16,6 +16,8 @@ $endif$
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
   <link rel="stylesheet" href="$revealjs-url$/reset.css">
   <link rel="stylesheet" href="$revealjs-url$/reveal.css">
+  <!-- code highlight style -->
+  <link href="/node_modules/nord-highlightjs/dist/nord.css" rel="stylesheet" type="text/css" />
   <style>
       code{white-space: pre-wrap;}
       span.smallcaps{font-variant: small-caps;}
