mathjax produces much nicer math

--- a/lectures/template.html
+++ b/lectures/template.html
@@ -92,7 +92,7 @@ $body$
   </div>
 
   <script src="$revealjs-url$/reveal.js"></script>
-	<script src="$revealjs-url$/reveal.js"></script>
+  <script src="$revealjs-url$/plugin/math/math.js"></script>
 	<script src="$revealjs-url$/plugin/notes/notes.js"></script>
 	<script src="$revealjs-url$/plugin/markdown/markdown.js"></script>
 	<script src="$revealjs-url$/plugin/highlight/highlight.js"></script>
@@ -299,7 +299,7 @@ $endif$
         helpButtonDisplay: 'first',
 
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealChalkboard, RevealMenu, PdfExport, HelpButton ]
+				plugins: [ RevealMarkdown, RevealMath, RevealHighlight, RevealNotes, RevealChalkboard, RevealMenu, PdfExport, HelpButton ]
 			});
 		</script>
 
